Add MySQL general tables

--- a/Smart/Views/Bank/Edit.cshtml
+++ b/Smart/Views/Bank/Edit.cshtml
@@ -1,4 +1,4 @@
-@model Core.Domain.Finance.Bank
+@model Core.Domain.Finance.AccountBank
 @{ ViewData["Title"] = ViewsLocalizer["Conta Caixa"]; ViewBag.PageClass = "container"; }
 @{ ViewData.AddActivePageApp(ActivePagesApp.RegBank); }
 
