--- a/Smart/Views/BankTrans/List.cshtml
+++ b/Smart/Views/BankTrans/List.cshtml
@@ -116,7 +116,7 @@
                     </div>
                     <div class="col-3">
                         <label>@Localizer["Caixa/Banco"]</label>
-                        <select id="BankId" name="BankId" class="form-control" asp-items="ViewBag.BankId">
+                        <select id="AccountBankId" name="AccountBankId" class="form-control" asp-items="ViewBag.AccountBankId">
                             <option></option>
                         </select>
                     </div>
