--- a/Smart/Views/FinancialStats/BankCash.cshtml
+++ b/Smart/Views/FinancialStats/BankCash.cshtml
@@ -63,8 +63,8 @@
 
 
             <div class="form-group col-md-4">
-                <label asp-for="BankId">@Localizer["Banco/Caixa"]</label>
-                <select asp-for="BankId" class="form-control" asp-items="ViewBag.BankId">
+                <label asp-for="AccountBankId">@Localizer["Banco/Caixa"]</label>
+                <select asp-for="AccountBankId" class="form-control" asp-items="ViewBag.AccountBankId">
                     <option></option>
                 </select>
             </div>
