--- a/Smart/Views/FinancialStats/CashFlow.cshtml
+++ b/Smart/Views/FinancialStats/CashFlow.cshtml
@@ -39,7 +39,7 @@
         </div>
         <div class="col-md-3">
             <label>@Localizer["Banco/Conta"]</label>
-            <select id="BankId" name="BankId" class="custom-select" asp-items="ViewBag.BankId">
+            <select id="AccountBankId" name="AccountBankId" class="custom-select" asp-items="ViewBag.AccountBankId">
                 <option></option>
             </select>
         </div>
