--- a/Smart/Views/Bank/Add.cshtml
+++ b/Smart/Views/Bank/Add.cshtml
@@ -1,4 +1,4 @@
-@model Core.Domain.Finance.Bank
+@model Core.Domain.Finance.AccountBank
 @{ ViewData["Title"] = ViewsLocalizer["Conta Caixa"]; ViewBag.PageClass = "container"; }
 @{ ViewData.AddActivePageApp(ActivePagesApp.RegBank); }<h4>@SharedLocalizer["Dados da"] @ViewData["Title"]</h4>
 <hr class="myb-4" />
