--- a/Smart/Views/Revenue/List.cshtml
+++ b/Smart/Views/Revenue/List.cshtml
@@ -147,11 +147,11 @@
                             </div>
                             <div class="form-group col-md-4">
                                 <label>@Localizer["Caixa"]</label>
-                                <select id="BankId" name="BankId" required asp-items="ViewBag.BankId" class="form-control"></select>
+                                <select id="AccountBankId" name="AccountBankId" required asp-items="ViewBag.AccountBankId" class="form-control"></select>
                             </div>
                             <div class="form-group col-md-4">
                                 <label>@Localizer["Forma de Pagamento"]</label>
-                                <select id="PaymentConditionId" name="PaymentConditionId" asp-items="ViewBag.PaymentConditionId" class="form-control"></select>
+                                <select id="ConditionId" name="ConditionId" asp-items="ViewBag.ConditionId" class="form-control"></select>
                             </div>
                         </div>
                         <div class="form-row">
