--- a/Smart/Views/Expense/_CreateOrUpdate.cshtml
+++ b/Smart/Views/Expense/_CreateOrUpdate.cshtml
@@ -20,11 +20,11 @@
             <span asp-validation-for="Name" class="text-danger"></span>
         </div>
         <div class="form-group col-md-6">
-            <label asp-for="CategoryId">@Localizer["Categoria"]</label>
-            <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.CategoryId">
+            <label asp-for="ChartAccountId">@Localizer["Categoria"]</label>
+            <select asp-for="ChartAccountId" class="form-control" asp-items="ViewBag.ChartAccountId">
                 <option></option>
             </select>
-            <span asp-validation-for="CategoryId" class="text-danger"></span>
+            <span asp-validation-for="ChartAccountId" class="text-danger"></span>
         </div>
     </div>
     <div class="form-row">
