--- a/Smart/Views/FinancialStats/BankCash.cshtml
+++ b/Smart/Views/FinancialStats/BankCash.cshtml
@@ -160,7 +160,7 @@
                                     };
                                     <tr class="table-row-body">
                                         <td class="table-item-body">
-                                            @Html.DisplayFor(modelItem => item.Id)
+                                            @Html.DisplayFor(modelItem => item.BankTransId)
                                         </td>
                                         <td class="table-item-body" data-toggle="tooltip" data-placement="top" title="@Html.DisplayFor(modelItem => item.Description)">
                                             @suplier
