--- a/Smart/Views/FinancialStats/Expense.cshtml
+++ b/Smart/Views/FinancialStats/Expense.cshtml
@@ -137,7 +137,7 @@
 
                                     <tr class="table-row-body">
                                         <td class="table-item-body">
-                                            @Html.DisplayFor(modelItem => item.FullNumber)
+                                            @item.ToString()
                                         </td>
                                         <td class="table-item-body" data-toggle="tooltip" data-placement="top" title="@Html.DisplayFor(modelItem => item.Person.FirstName)">
                                             @suplier
