--- a/Smart/Views/Home/Index.cshtml
+++ b/Smart/Views/Home/Index.cshtml
@@ -1,4 +1,1 @@
-﻿@{ ViewData["Title"] = Localizer["Dashboard"]; ViewBag.PageClass = "container"; }
-
-
-
+﻿@{ ViewData["Title"] = Localizer["Dashboard"]; ViewBag.PageClass = "container"; ViewBag.Home = "isHome"; }
