--- a/Smart/Views/Shared/Components/CardExpenseTransStats/Default.cshtml
+++ b/Smart/Views/Shared/Components/CardExpenseTransStats/Default.cshtml
@@ -52,7 +52,7 @@
         <thead>
             <tr>
                 <th class="" width="80"> @Localizer["Número"]</th>
-                <th width="80"> @Localizer["Vencimento"]</th>
+                <th width="80"> @Localizer["Pagamento"]</th>
                 <th> @Localizer["Lançamento"]</th>
                 <th width="120"> @Localizer["Valor"]</th>
 
