--- a/Smart/Views/Shared/_ExpenseStats.cshtml
+++ b/Smart/Views/Shared/_ExpenseStats.cshtml
@@ -22,14 +22,14 @@
     </div>
     <div class="col-2">
         <vc:card-expense-fix-stats time="@ModelCards.ToAfter"
-                                   title="Recebimento Futuro"
+                                   title="Pagamento Futuro"
                                    css-card="text-success"
                                    model="@ModelCards.SimpleCard">
         </vc:card-expense-fix-stats>
     </div>
     <div class="col-2">
         <vc:card-expense-fix-stats time="@ModelCards.All"
-                                   title="Total a Receber"
+                                   title="Total a Pagar"
                                    css-card="text-success"
                                    model="@ModelCards.SimpleCard">
         </vc:card-expense-fix-stats>
