--- a/Smart/Views/FinancialStats/CashFlow.cshtml
+++ b/Smart/Views/FinancialStats/CashFlow.cshtml
@@ -1,12 +1,19 @@
 ﻿@{ ViewData["Title"] = Localizer["Fluxo de Caixa"]; ViewBag.PageClass = "container"; ViewData.AddActivePageApp(ActivePagesApp.CashFlow);}
+@{ 
+    DateTime date = DateTime.Now;
+    var firstDayOfMonth = new DateTime(date.Year, date.Month, 1);
+    var lastDayOfMonth = firstDayOfMonth.AddMonths(1).AddDays(-1);
+}
 <div class="row">
     <div class="col-md-6 col-sm-12">
         <div class="input-group">
             <div class="input-group-prepend">
-                <span class="input-group-text" id="">Datas</span>
+                <span id="spDatas" name="spDatas" class="input-group-text"> Data do Vencimento</span>
             </div>
-            <input type="text" id="dueStartDate" name="dueStartDate" class="form-control datepicker" value="@System.DateTime.Now.ToShortDateString()">
-            <input type="text" id="dueEndDate" name="dueEndDate" class="form-control datepicker" value="@System.DateTime.Now.ToShortDateString()">
+            <input type="text" id="dueStartDate" name="dueStartDate" class="form-control datepicker" 
+                   value="@firstDayOfMonth.ToShortDateString()">
+            <input type="text" id="dueEndDate" name="dueEndDate" class="form-control datepicker" 
+                   value="@lastDayOfMonth.ToShortDateString()">
             <div class="input-group-append">
                 <button id="refresh" class="btn btn-outline-secondary" type="button"><i class="fab fa-searchengin"></i></button>
                 <button class="btn btn-outline-secondary" type="button" data-toggle="collapse" href="#painelStats" role="button"><i class="fas fa-chart-area"></i></button>
@@ -23,13 +30,13 @@
             <div class="form-check">
                 <input class="form-check-input" type="radio" name="payed" id="payed" value="true">
                 <label class="form-check-label" for="exampleRadios1">
-                    @Localizer["Realizados"]
+                    @Localizer["Realizados/Pagos"]
                 </label>
             </div>
             <div class="form-check">
                 <input class="form-check-input" type="radio" name="payed" id="payed" value="false" checked="checked">
                 <label class="form-check-label" for="exampleRadios2">
-                    @Localizer["Previstos"]
+                    @Localizer["Previstos/Abertos"]
                 </label>
             </div>
         </div>
@@ -63,9 +70,9 @@
                     <div class="card-body">
                         <p class="card-title h3 text-success font-weight-light">@Localizer["Receitas"]</p>
                         <div id="revenueValue" class="card-text text-center h1 font-weight text-success">
-                            <vc:card-revenue-stats payed="false"
-                                                   due-end-date="@System.DateTime.Now"
-                                                   due-start-date="@System.DateTime.Now"
+                            <vc:card-revenue-stats payed="false" 
+                                                   due-end-date="@lastDayOfMonth"
+                                                   due-start-date="@firstDayOfMonth"
                                                    search-term=""
                                                    title=""
                                                    css-card="text-success"
@@ -89,8 +96,8 @@
                         <p class="card-title h3 text-danger font-weight-light">@Localizer["Despesas"]</p>
                         <div id="expenseValue" class="card-text text-center h1 font-weight text-danger">
                             <vc:card-expense-stats payed="false"
-                                                   due-end-date="@System.DateTime.Now"
-                                                   due-start-date="@System.DateTime.Now"
+                                                   due-end-date="@lastDayOfMonth"
+                                                   due-start-date="@firstDayOfMonth"
                                                    search-term=""
                                                    title=""
                                                    css-card="text-success"
@@ -113,18 +120,19 @@
                     <div class="card-body">
                         <p class="card-title h3 text-info">Bancos/Caixa</p>
                         <div id="BankValue" class="card-text text-center h1 font-weight text-info">
-                            <vc:card-bank-trans-stats payed="true" signal="null" bank-id="null"
-                                                      due-end-date="@System.DateTime.Now"
-                                                      due-start-date="@System.DateTime.Now"
+                            <vc:card-bank-trans-stats payed="true" signal="null" 
+                                                      account-bank-id="null"
+                                                      due-end-date="@lastDayOfMonth"
+                                                      due-start-date="@firstDayOfMonth"
                                                       search-term=""
-                                                      title=""
+                                                      title="" 
                                                       css-card="text-success"
                                                       model="@ModelCards.SimpleNumber">
                             </vc:card-bank-trans-stats>
                         </div>
                         <div id="BankValueAmountLate" class="text-muted small">
                             <vc:card-bank-trans-fix-stats time="0"
-                                                          bank-id="null"
+                                                          account-bank-id="null"
                                                           ref-date="@System.DateTime.Now"
                                                           title=""
                                                           css-card=""
@@ -161,8 +169,9 @@
                 <div class="tab-pane fade show active" id="revenue" role="tabpanel" aria-labelledby="revenue-tab">
                     <div class="card-body">
                         <div id="ListRevenue">
-                            <vc:card-revenue-stats payed="false" due-end-date="@System.DateTime.Now"
-                                                   due-start-date="@System.DateTime.Now"
+                            <vc:card-revenue-stats payed="false" 
+                                                   due-end-date="@lastDayOfMonth"
+                                                   due-start-date="@firstDayOfMonth"
                                                    search-term=""
                                                    title=""
                                                    css-card="text-success"
@@ -174,8 +183,9 @@
                 <div class="tab-pane fade" id="expense" role="tabpanel" aria-labelledby="expense-tab">
                     <div class="card-body">
                         <div id="ListExpense">
-                            <vc:card-expense-stats payed="false" due-end-date="@System.DateTime.Now"
-                                                   due-start-date="@System.DateTime.Now"
+                            <vc:card-expense-stats payed="false" 
+                                                   due-end-date="@lastDayOfMonth"
+                                                   due-start-date="@firstDayOfMonth"
                                                    search-term=""
                                                    title=""
                                                    css-card="text-success"
@@ -187,10 +197,10 @@
                 <div class="tab-pane fade" id="bank" role="tabpanel" aria-labelledby="bank-tab">
                     <div class="card-body">
                         <div id="ListBank">
-                            <vc:card-bank-trans-stats bank-id="null" payed="false" signal="null"
-                                                      due-end-date="@System.DateTime.Now"
-                                                      due-start-date="@System.DateTime.Now"
-                                                      search-term=""
+                            <vc:card-bank-trans-stats payed="false" signal="null"
+                                                   due-end-date="@lastDayOfMonth"
+                                                   due-start-date="@firstDayOfMonth"
+                                                      search-term="" account-bank-id="null"
                                                       title=""
                                                       css-card="text-success"
                                                       model="@ModelCards.SimpleTableRow">
@@ -202,13 +212,15 @@
                     <div class="card-body">
                         <div id="ListCash">
                          
-                            <vc:card-cash-flow due-end-date="@System.DateTime.Now"
-                                               due-start-date="@System.DateTime.Now"
+                            <vc:card-cash-flow 
+                                               due-end-date="@lastDayOfMonth"
+                                               due-start-date="@firstDayOfMonth"
                                                search-term=""
                                                title="" initial="null" payed="false"
                                                css-card="text-success"
                                                model="@ModelCards.SimpleTableRow">
                             </vc:card-cash-flow>
+
                         </div>
                     </div>
                 </div>
