--- a/Smart/Views/FinancialStats/Reports.cshtml
+++ b/Smart/Views/FinancialStats/Reports.cshtml
@@ -1,6 +1,7 @@
-﻿@{ DateTime today = new DateTime(System.DateTime.Now.Year, System.DateTime.Now.Month, System.DateTime.Now.Day);
-    today = today.AddDays(-1);
-    }
+﻿@{ string today = new DateTime(System.DateTime.Now.Year, System.DateTime.Now.Month, System.DateTime.Now.Day).AddDays(-1).ToString("MM/dd/yyyy");
+}
+
+
 @{ ViewData["Title"] = Localizer["Relatórios Financeiros"]; ViewBag.PageClass = "container"; ViewData.AddActivePageApp(ActivePagesApp.FinanceReports);}
 
 <h2 class="text-muted">@Localizer["Relatórios Financeiros"]</h2>
@@ -101,7 +102,8 @@
 
     </div>
     <div class="col">
-        <form id="form2" method="post" asp-action="Revenue" asp-controller="FinancialStats" asp-route-dueDateEnd="@today">
+        <form id="form2" method="post" asp-action="Revenue" asp-controller="FinancialStats"
+              asp-route-dueDateEnd="@today">
             <p class="text-danger h4 font-weight-light">
                 <a class="text-danger" href="#" onclick="form2.submit();">
                     @Localizer["Clientes Inadimplentes"]
