--- a/Smart/Views/Person/_CreateOrUpdate.cshtml
+++ b/Smart/Views/Person/_CreateOrUpdate.cshtml
@@ -18,35 +18,42 @@
             <select asp-for="Type" asp-items="Html.GetEnumSelectList<Core.Fake.ClassPersonEnum>()" class="form-control"></select>
             <span asp-validation-for="Type" class="text-danger"></span>
         </div>
+        
+
+    </div>
+    <div class="form-row">
+        
         <div class="form-group col-md-4">
             <label asp-for="RegistrationCode">@Localizer["Cnpj/Cpf"]</label>
             <input asp-for="RegistrationCode" placeholder="@Localizer["Cnpj/Cpf"]" class="form-control" />
             <span asp-validation-for="RegistrationCode" class="text-danger"></span>
         </div>
-        <div class="form-group col-md-4">
+        <div class="form-group col-md-2">
+            <label asp-for="RegistrationState">@Localizer["Incrição Estadual"]</label>
+            <input asp-for="RegistrationState" placeholder="@Localizer["Incrição Estadual"]" class="form-control" />
+            <span asp-validation-for="RegistrationState" class="text-danger"></span>
+        </div>
+
+    </div>
+    <div class="form-row">
+        <div class="form-group col-md-6">
             <label asp-for="FirstName">@Localizer["Razão"]</label>
             <input asp-for="FirstName" placeholder="@Localizer["Razão"]" class="form-control" />
             <span asp-validation-for="FirstName" class="text-danger"></span>
         </div>
-    </div>
-    <div class="form-row">
         <div class="form-group col-md-4">
             <label asp-for="LastName">@Localizer["Fantasia"]</label>
             <input asp-for="LastName" placeholder="@Localizer["Fantasia"]" class="form-control" />
             <span asp-validation-for="LastName" class="text-danger"></span>
         </div>
-        <div class="form-group col-md-4">
-            <label asp-for="RegistrationState">@Localizer["Incrição Estadual"]</label>
-            <input asp-for="RegistrationState" placeholder="@Localizer["Incrição Estadual"]" class="form-control" />
-            <span asp-validation-for="RegistrationState" class="text-danger"></span>
-        </div>
+
     </div>
     <div class="form-row">
-        <div class="form-group col-md-4">
-            <label asp-for="PersonType">@Localizer["Tipo do Cadastro"]</label>
-            <select asp-for="Type" asp-items="Html.GetEnumSelectList<Core.Fake.TypePersonEnum>()" class="form-control"></select>
-            <span asp-validation-for="PersonType" class="text-danger"></span>
-        </div>
+        @*<div class="form-group col-md-4">
+                <label asp-for="PersonType">@Localizer["Tipo do Cadastro"]</label>
+                <select asp-for="Type" asp-items="Html.GetEnumSelectList<Core.Fake.TypePersonEnum>()" class="form-control"></select>
+                <span asp-validation-for="PersonType" class="text-danger"></span>
+            </div>*@
         <div class="form-group col-md-4">
             <label asp-for="CategoryId">@Localizer["Categoria"]</label>
             <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.CategoryId">
