--- a/Smart/Views/Shared/Components/CardRevenueStats/Default.cshtml
+++ b/Smart/Views/Shared/Components/CardRevenueStats/Default.cshtml
@@ -48,12 +48,14 @@
 @if (Model.HtmlModel.Equals(ModelCards.SimpleTableRow))
 {
     <input type="hidden" id="valueidRevenue" value="@GetValue()" />
+
     <table id="resultTableRevenue" class="table table-hover table-sm text-left" cellspacing="0" cellpadding="0">
         <thead>
             <tr>
                 <th class="" width="80"> @Localizer["Número"]</th>
                 <th width="80"> @Localizer["Vencimento"]</th>
                 <th> @Localizer["Lançamento"]</th>
+                <th> @Localizer["Categoria"]</th>
                 <th width="120"> @Localizer["Valor"]</th>
 
             </tr>
@@ -61,28 +63,32 @@
         <tbody>
             @foreach (var item in Model.Revenues.OrderBy(a => a.DueDate.Value.Date))
             {
-                <tr class="table-row-body text-@( item.DueDate < System.DateTime.Now ? "danger" : "" )">
-                    <td class="table-item-body">
-                        @Html.DisplayFor(modelItem => item.RevenueNumber)/@Html.DisplayFor(modelItem => item.RevenueSeq)
-                    </td>
-                    <td class="table-item-body">
-                        @Html.DisplayFor(modelItem => item.DueDate)
-                    </td>
-                    <td class="table-item-body" data-toggle="tooltip" data-placement="top" title="@item.Name : @item.Comment">
-                        @item.Name.Truncate(30, true)
-                        @if (item.RevenueTotalSeq > 1)
-                        {
-                            <span class="badge badge-success">
-                                @Html.DisplayFor(modelItem => item.RevenueSeq)
-                                /@Html.DisplayFor(modelItem => item.RevenueTotalSeq)
-                            </span>
-                        }
-                    </td>
-                    <td class="table-item-body">
-                        @( Model.payed ? item.Credit.ToString("c")  : item.AmountFinal.ToString("c") )
-                    </td>
+            <tr class="table-row-body text-@( item.DueDate < System.DateTime.Now ? "danger" : "" )">
+                <td class="table-item-body">
+                    @Html.DisplayFor(modelItem => item.RevenueNumber)/@Html.DisplayFor(modelItem => item.RevenueSeq)
+                </td>
+                <td class="table-item-body">
+                    @Html.DisplayFor(modelItem => item.DueDate)
+                </td>
+                <td class="table-item-body" data-toggle="tooltip" data-placement="top" title="@item.Name : @item.Comment">
+                    @item.Name.Truncate(30, true)
+                    @if (item.RevenueTotalSeq > 1)
+                    {
+                        <span class="badge badge-success">
+                            @Html.DisplayFor(modelItem => item.RevenueSeq)
+                            /@Html.DisplayFor(modelItem => item.RevenueTotalSeq)
+                        </span>
+                    }
+                </td>
+                <td class="table-item-body">
+                    @{ string category = item.CategoryFinancial != null ? item.CategoryFinancial.Name.Truncate(30, true) : "";}
+                    @category
+                </td>
+                <td class="table-item-body">
+                    @( Model.payed ? item.Credit.ToString("c") : item.AmountFinal.ToString("c") )
+                </td>
 
-                </tr>
+            </tr>
             }
         </tbody>
     </table>
