--- a/Smart/Views/Shared/_HeaderMenu.cshtml
+++ b/Smart/Views/Shared/_HeaderMenu.cshtml
@@ -65,38 +65,17 @@
 
 
 
-                    <li class="nav-item dropdown @ActivePagesApp.SalesNavClass(ViewContext)">
+                    @*<li class="nav-item dropdown @ActivePagesApp.SalesNavClass(ViewContext)">
                         <a class="nav-link dropdown-toggles" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Vendas
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 
                             <li> <a class="dropdown-item @ActivePagesApp.InvoiceNavClass(ViewContext)" asp-action="List" asp-controller="Invoice">Notas Fiscais</a> </li>
-                            @*<li>
-                                <a class="dropdown-item dropdown-toggle" href="#">Submenu</a>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">Submenu action</a></li>
-                                    <li><a class="dropdown-item" href="#">Another submenu action</a></li>
-
-                                    <li>
-                                        <a class="dropdown-item dropdown-toggle" href="#">Subsubmenu</a>
-                                        <ul class="dropdown-menu">
-                                            <li><a class="dropdown-item" href="#">Subsubmenu action aa</a></li>
-                                            <li><a class="dropdown-item" href="#">Another subsubmenu action</a></li>
-                                        </ul>
-                                    </li>
-                                    <li>
-                                        <a class="dropdown-item dropdown-toggle" href="#">Second subsubmenu</a>
-                                        <ul class="dropdown-menu">
-                                            <li><a class="dropdown-item" href="#">Subsubmenu action bb</a></li>
-                                            <li><a class="dropdown-item" href="#">Another subsubmenu action</a></li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </li>*@
+                           
                         </ul>
 
-                    </li>
+                    </li>*@
                     <li class="nav-item dropdown @ActivePagesApp.ReportsNavClass(ViewContext)">
                         <a class="nav-link dropdown-toggles" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Relatórios
